src/scss/components/_section-hero.scss
// demo-reel
.video-demo-bg {
  height: 100vh;
  width: 100vw;
  overflow-x: hidden;
}

.video-demo-bg video source {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  background-size: cover;
}

// banderolle

.banderolle {
  position: absolute;
  width: 100vw;
  height: 28%;
  left: 0;
  top: 400px;

  background: rgba(131, 92, 237, 0.45);

  display: flex;
  flex-direction: column;
  align-items: center;
}


// texte-banderolle
.hero h1 {
  margin: 35px 0 0 0;
}

.hero p {
  width: 193px;
  height: 50px;

  margin-top: 0;

  line-height: 25px;

  font-size: $fz-normal3;
}

.hero a {
  margin: 0;
}

@media screen and (max-width: $vw-tablette) {
  .video-demo-bg video{
    left: 50%;
    min-height: 100%;
    min-width: 100%;
    position: absolute;
    top: 50%;
    transform: translate(-50%, -50%);
  }
}

@media screen and (max-width: $vw-mobile) {
  .video-demo-bg video{
    left: 50%;
    min-height: 100%;
    min-width: 100%;
    position: absolute;
    top: 50%;
    transform: translate(-50%, -50%);
  }
}

